--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -6,15 +6,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content class="ion-padding">
+  <ion-button (click)="foto()" expand="block" fill="clear" shape="round">
+    Foto
+  </ion-button>
+  <img #gambarnya src="" alt="">
 </ion-content>
